== 0.15.1 2009-10-17

* 3 minor enhancements:
  * fixed deployment using capistrano
  * fixed zena:setup task to copy files instead of symlink
  * better versions list and diff select

== 0.15.0 2009-10-16

* 5 major enhancements:
  * running rails 2.3.4
  * installable as gem without RMagick
  * usable as gem with config.gem
  * supports sqlite3
  * 'zena' command to create app

* 3 minor enhancemnts:
  * huge speed improvement in version loading
  * massive code cleanup
  * better team workflow (reworked access rights)

== 0.11.1 2009-04-03

* minor enhancements:
  * Better testing of custom queries using latest querybuilder (0.5.2)