@@ -1,4 +1,4 @@
-<div id='number'><%= @node.version.number.to_s + (@node.version.new_record? ? '+' : '') %></div>
+<div id='number'><%= @node.version.number %></div>
 <div id='form_errors' onclick='new Element.hide("form_errors")'><%= error_messages_for @node %></div>
 <div id='search'><%= search_box(:ajax=>true) %></div>
 
